antes de continuar

--- a/src/app/modules/auth/page/login-page.component.html
+++ b/src/app/modules/auth/page/login-page.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper-login-form">
     <div class="login-form">
         <div>
-            <i class="logo-icon uil uil-visual-studio"></i>
+            <i class="logo-icon uil uil-apps"></i>
         </div>
         <div class="text-label">
             Iniciar sesión
