--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
     --color-3: #FAFBFC;
     --color-4: #5E6C84;
     --color-5: #4ca03b;
-    --font-family-1: 'Roboto', sans-serif;
+    --font-family-1: 'Poppins', sans-serif;
     --box-shadow-1: rgb(0 0 0 / 10%) 0 0 10px;
     --font-size-1: 1rem;
     --font-size-2: 1.2rem;
