antes de chroma

--- a/src/app/modules/task/page/task-page.component.html
+++ b/src/app/modules/task/page/task-page.component.html
@@ -1,1 +1,5 @@
-<p>task-page works!</p>
+<app-header></app-header>
+
+<div>
+    <img src="https://avatars.githubusercontent.com/u/15802366?v=4" alt="">
+</div>
