--- a/src/app/modules/task/page/task-page.component.html
+++ b/src/app/modules/task/page/task-page.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
-
-<div>
-    <img src="https://avatars.githubusercontent.com/u/15802366?v=4" alt="">
+<div class="task-columns">
+   
+    <app-column [name]="group.label" 
+    [data]="group.list" 
+    *ngFor="let group of (groups$ | async)?.data">
+    </app-column>
 </div>
+
+<app-new-task></app-new-task>
