--- a/src/app/modules/task/components/header/header.component.html
+++ b/src/app/modules/task/components/header/header.component.html
@@ -1,6 +1,8 @@
 <div class="navbar">
     <div class="d-flex logo-section d-all-center">
-        <div class="logo">Task</div>
+        <div class="logo" [routerLink]="['/','auth','login']">
+            {{testCourseService.dataTest}}
+        </div>
         <div class="menu">
             <ul>
                 <li 
@@ -11,6 +13,9 @@
         </div>
     </div>
     <div class="d-flex d-all-center user-section">
+        <div>
+            <button class="btn-primary">Nueva tarea</button>
+        </div>
         <div class="notifications">
             <span class="count">5</span>
             <i class="uil uil-bell"></i>
